# scippuncertainty

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  bibliography.html  genindex.html  index.html  objects.inv  output.txt  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tox.ini
.github/workflows/: ci.yml  docs.yml  release.yml
_modules/: index.html  typing.html
_modules/scippuncertainty/: correlation.html  random.html
_modules/scippuncertainty/mc/: accumulator.html  driver.html  sampler.html
_sources/: index.md
_sources/about/: index.md
_sources/user-guide/: index.rst  installation.rst  mc.ipynb
_static/: documentation_options.js
about/: index.html
api-reference/: index.html
conda/: meta.yaml
developer/: coding-conventions.html  dependency-management.html  getting-started.html  index.html
docs/: bibliography.bib  conf.py  index.md  index.rst  version.py
docs/about/: index.md
docs/api-reference/: index.md
docs/developer/: dependency-management.md
docs/reference/: index.rst
docs/user-guide/: mc.ipynb
requirements/: base.in  base.txt  ci.in  ci.txt  dev.txt  docs.in  docs.txt  nightly.in  nightly.txt  static.txt  test.in  test.txt
src/scipp_uncertainty/: __init__.py  _progress.py  logging.py  random.py
src/scipp_uncertainty/mc/: __init__.py  accumulator.py  driver.py  sampler.py
src/scippuncertainty/: __init__.py  _progress.py  _util.py  correlation.py  random.py
src/scippuncertainty/mc/: __init__.py  accumulator.py  driver.py  sampler.py
tests/: correlation_test.py  package_test.py  random.py  random_test.py  util.py
tests/mc/: accumulator_test.py  driver_test.py  sampler_test.py
user-guide/: index.html  installation.html  mc.html
